# nanomix

./: .gitignore  Cargo.toml  README.md  example_input.tsv  pyproject.toml  test_sigma.tsv
atlases/: 39Bisulfite.tsv  bermanAtlas.bed  chengOrigAtlas.bed  deduplicate.txt  loyferAtlas.bed  loyferAtlas.tsv  mossAtlas.bed  mossAtlas.tsv
python/nanomix/: __init__.py  atlas.py  functions.py  main.py  models.py  plot.py  run_tests.py  tools.py
python/nanomix/tests/: test_assign.py  test_deconvolute.py  test_evaluate.py  test_load_atlas.py  test_simulate.py
python/nanomix/tests/test_data/: 39Bisulfite.tsv  test_atlas.tsv  test_methylome.tsv  test_sigma.tsv
scripts/: nanomix.py  plot_atlas_hist.py
src/: lib.rs
